--- a/vnc/supervisord.ini
+++ b/vnc/supervisord.ini
@@ -54,6 +54,6 @@ user=root
 priority=5
 
 [program:alacritty]
-command=alacritty -e sh -c "picom -b"
+command=alacritty -e neofetch"
 user=marc
 priority=5
