--- a/vnc/supervisord.conf
+++ b/vnc/supervisord.conf
@@ -3,15 +3,10 @@ nodaemon=true
 ; nodaemon=false
 
 [program:X11]
-command=/usr/bin/Xvfb :0 -screen 0 1820x980x8
+command=/usr/bin/Xdummy :0 -screen 0 1820x980x8
 autorestart=true
 user=marc
 priority=1
-
-; [program:startx]
-; command=startx
-; autorestart=true
-; priority=1
 
 [program:picom]
 command=zsh -c "sleep 5 && picom -b"
