xorg is mandatory

--- a/vnc/Dockerfile
+++ b/vnc/Dockerfile
@@ -10,7 +10,7 @@ RUN paru -Syyyu --noconfirm \
 	x11vnc \
     novnc \
     cron \
-	# xorg-server \
+	xorg-server \
 	# xorg-server-utils \
     ttf-meslo-nerd-font-powerlevel10k \
 	# xorg-server-xvfb
