--- a/vnc/Dockerfile
+++ b/vnc/Dockerfile
@@ -7,7 +7,8 @@ ENV DISPLAY=:0.0
 
 # Install packages
 RUN paru -Syyyu --noconfirm \
-	xorg-server \ # required for xdummy
+    # xorg-server required for xdummy
+	xorg-server \
     # xorg-server-utils \
 	# xorg-server-xvfb \
     xf86-video-dummy \
