--- a/vnc/supervisord.conf
+++ b/vnc/supervisord.conf
@@ -1,6 +1,15 @@
 [supervisord]
 nodaemon=true
 
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[unix_http_server]
+file=/tmp/supervisord.sock
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisord.sock
+
 [program:X11]
 command=/usr/bin/Xdummy :0 -screen 0 1820x980x8
 autorestart=true
