xdummy as x11vnc option

--- a/vnc/supervisord.conf
+++ b/vnc/supervisord.conf
@@ -10,11 +10,11 @@ file=/tmp/supervisord.sock
 [supervisorctl]
 serverurl=unix:///tmp/supervisord.sock
 
-[program:X11]
-command=/usr/bin/Xdummy :0 -screen 0 1820x980x8
-autorestart=true
-user=marc
-priority=1
+# [program:X11]
+# command=/usr/bin/Xdummy :0 -screen 0 1820x980x8
+# autorestart=true
+# user=marc
+# priority=1
 
 [program:picom]
 command=zsh -c "sleep 5 && picom -b"
@@ -23,7 +23,7 @@ autorestart=true
 priority=2
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -shared -forever
+command=/usr/bin/x11vnc -xdummy -shared -forever
 autorestart=true
 user=marc
 priority=2
