--- a/vnc/supervisord.conf
+++ b/vnc/supervisord.conf
@@ -10,7 +10,13 @@ file=/tmp/supervisord.sock
 [supervisorctl]
 serverurl=unix:///tmp/supervisord.sock
 
-# [program:X11]
+[program:xvfb]
+command=xvfb :0 -screen 1820x980x8
+autorestart=true
+user=marc
+priority=1
+
+# [program:xdummy]
 # command=/usr/bin/Xdummy :0 -screen 0 1820x980x8
 # autorestart=true
 # user=marc
@@ -23,7 +29,7 @@ autorestart=true
 priority=2
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -xdummy -shared -forever
+command=/usr/bin/x11vnc -shared -forever
 autorestart=true
 user=marc
 priority=2
