--- a/vnc/supervisord.conf
+++ b/vnc/supervisord.conf
@@ -11,7 +11,7 @@ file=/tmp/supervisord.sock
 serverurl=unix:///tmp/supervisord.sock
 
 [program:xvfb]
-command=Xvfb :0 -screen 1820x980x8
+command=Xvfb :0 -screen 0 1820x980x8
 autorestart=true
 user=marc
 priority=1
