--- a/vnc/supervisord.conf
+++ b/vnc/supervisord.conf
@@ -23,7 +23,7 @@ priority=1
 # priority=1
 
 [program:picom]
-command=zsh -c "sleep 5 && picom -b"
+command=picom
 user=marc
 autorestart=true
 priority=2
