--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -35,6 +35,7 @@ jobs:
         path: /tmp/base.tar
 
   xorg:
+    needs: base
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -65,6 +66,7 @@ jobs:
         path: /tmp/xorg.tar
 
   vnc:
+    needs: xorg
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -95,6 +97,7 @@ jobs:
         path: /tmp/vnc.tar
 
   parabola:
+    needs: xorg
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
