--- a/vnc/supervisord.conf
+++ b/vnc/supervisord.conf
@@ -11,27 +11,15 @@ file=/tmp/supervisord.sock
 serverurl=unix:///tmp/supervisord.sock
 
 [program:xvfb]
-command=Xvfb :0 -screen 0 1820x980x8
+command=Xvnc :1 -SecurityTypes None
 autorestart=true
 user=marc
 priority=1
-
-# [program:xdummy]
-# command=/usr/bin/Xdummy :0 -screen 0 1820x980x8
-# autorestart=true
-# user=marc
-# priority=1
 
 [program:picom]
 command=picom
 user=marc
 autorestart=true
-priority=2
-
-[program:x11vnc]
-command=/usr/bin/x11vnc -shared -forever
-autorestart=true
-user=marc
 priority=2
 
 [program:dwm]
