--- a/vnc/supervisord.conf
+++ b/vnc/supervisord.conf
@@ -10,8 +10,8 @@ file=/tmp/supervisord.sock
 [supervisorctl]
 serverurl=unix:///tmp/supervisord.sock
 
-[program:xvfb]
-command=Xvnc :1 -SecurityTypes None
+[program:xvnc]
+command=Xvnc :0 -SecurityTypes None
 autorestart=true
 user=marc
 priority=1
