--- a/vnc/supervisord.conf
+++ b/vnc/supervisord.conf
@@ -11,7 +11,7 @@ file=/tmp/supervisord.sock
 serverurl=unix:///tmp/supervisord.sock
 
 [program:xvnc]
-command=Xvnc :0 -SecurityTypes None
+command=Xvnc :0 -SecurityTypes None -geometry 1820x980
 autorestart=true
 user=marc
 priority=1
