--- a/xorg/Dockerfile
+++ b/xorg/Dockerfile
@@ -45,7 +45,7 @@ RUN git clone https://github.com/marcpartensky/shell git/shell
 RUN make -C git/shell
 
 USER root
-COPY supervisord.ini /etc/supervisor.d/supervisord.ini
+COPY supervisord.conf /etc/supervisor.d/supervisord.conf
 COPY entrypoint.sh entrypoint.sh
 ENTRYPOINT [ "./entrypoint.sh" ]
 # ENTRYPOINT [ "DISPLAY=:0", "Xephyr", ":1" ]
