/etc/supervisord.conf

--- a/vnc/Dockerfile
+++ b/vnc/Dockerfile
@@ -22,6 +22,6 @@ COPY crontab.txt /var/spool/cron/marc
 RUN chmod 600 /var/spool/cron/marc
 
 USER marc
-COPY supervisord.conf entrypoint.sh /opt/arch/
+COPY entrypoint.sh /opt/arch/
+COPY supervisord.conf /etc/supervisord.conf
 ENTRYPOINT [ "/opt/arch/entrypoint.sh" ]
-# ENTRYPOINT ["/usr/bin/supervisord", "-c", "/etc/supervisor.d/supervisord.ini"]
