--- a/waylandvnc/Dockerfile
+++ b/waylandvnc/Dockerfile
@@ -3,6 +3,7 @@ LABEL maintainer=<marc.partensky@gmail.com>
 
 RUN paru -Syyyu --noconfirm \
     hyprland-bin \
+    hyprpaper-git \
     waybar
 
 USER root
