--- a/waylandvnc/supervisord.conf
+++ b/waylandvnc/supervisord.conf
@@ -22,17 +22,23 @@ autorestart=true
 user=marc
 priority=3
 
-[program:waybar]
-command=waybar
-autorestart=true
-user=marc
-priority=3
-
 [program:noVNC]
 command=/sbin/novnc --vnc localhost:5900 --listen 8080
 autorestart=true
 user=marc
 priority=3
+
+[program:hyprpaper]
+command=hyprpaper
+autorestart=true
+user=marc
+priority=4
+
+[program:waybar]
+command=waybar
+autorestart=true
+user=marc
+priority=4
 
 [program:cron]
 command=crond -f
