--- a/waylandvnc/Dockerfile
+++ b/waylandvnc/Dockerfile
@@ -4,7 +4,8 @@ LABEL maintainer=<marc.partensky@gmail.com>
 RUN paru -Syyyu --noconfirm \
     hyprland-bin \
     hyprpaper-git \
-    waybar
+    waybar \
+    grim
 
 USER root
 COPY crontab.txt /var/spool/cron/marc
