wpaperd instead of hyprpaper

--- a/waylandvnc/Dockerfile
+++ b/waylandvnc/Dockerfile
@@ -3,7 +3,9 @@ LABEL maintainer=<marc.partensky@gmail.com>
 
 RUN paru -Syyyu --noconfirm \
     hyprland-bin \
+    # hyprpaper-git \
     hyprpaper-git \
+    wpaperd \
     waybar \
     grim \
     wf-recorder \
