--- a/waylandvnc/supervisord.conf
+++ b/waylandvnc/supervisord.conf
@@ -28,11 +28,17 @@ autorestart=true
 user=marc
 priority=3
 
-[program:hyprpaper]
-command=hyprpaper
+[program:wpaperd]
+command=wpaperd --no-daemon
 autorestart=true
 user=marc
 priority=4
+
+# [program:hyprpaper]
+# command=hyprpaper
+# autorestart=true
+# user=marc
+# priority=4
 
 [program:waybar]
 command=waybar
