--- a/waylandvnc/supervisord.conf
+++ b/waylandvnc/supervisord.conf
@@ -10,8 +10,8 @@ file=/tmp/supervisord.sock
 [supervisorctl]
 serverurl=unix:///tmp/supervisord.sock
 
-[program:xvnc]
-command=Xvnc :0 -SecurityTypes None -geometry 1820x980
+[program:wayvnc]
+command=wayvnc
 autorestart=true
 user=marc
 priority=1
