xdg env vars and wayland display

--- a/artix/Dockerfile
+++ b/artix/Dockerfile
@@ -46,13 +46,14 @@ ENV LANG fr_FR.UTF-8
 ENV LANGUAGE fr_FR:fr
 
 USER marc
-ENV HOST docker
-ENV XDG_RUNTIME_DIR=/run/user/1000
-ENV LIBSEAT_BACKEND=logind
 # ENV WLR_DRM_DEVICES=/dev/dri/card0
 ENV WLR_BACKENDS=headless
 ENV WLR_RENDERER=pixman
 ENV WLR_LIBINPUT_NO_DEVICES=1
+ENV WAYLAND_DISPLAY=wayland-1
+ENV LIBSEAT_BACKEND=logind
+ENV XDG_RUNTIME_DIR=/tmp
+ENV XDG_SESSION_TYPE=wayland
 
 WORKDIR /home/marc
 RUN mkdir git
