--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,17 @@ services:
     tmpfs:
       - /tmp
       - /run
-    volumes:
+    # volumes:
       # - /var/run/docker.sock:/var/run/docker.sock
       # - /sys/fs/cgroup:/sys/fs/cgroup:ro
-      - /dev/dri:/dev/dri
-
+      # - /dev/dri:/dev/dri
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
 
   xorg:
     image: marcpartensky/arch:xorg
