--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,15 @@ services:
       # - /var/run/docker.sock:/var/run/docker.sock
       # - /sys/fs/cgroup:/sys/fs/cgroup:ro
       # - /dev/dri:/dev/dri
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvdia
-              count: 1
-              capabilities: [gpu]
+    devices:
+      - /dev/dri
+    # deploy:
+    #   resources:
+    #     reservations:
+    #       devices:
+    #         - driver: nvdia
+    #           count: 1
+    #           capabilities: [gpu]
 
   xorg:
     image: marcpartensky/arch:xorg
