--- a/artix/Dockerfile
+++ b/artix/Dockerfile
@@ -27,7 +27,6 @@ RUN paru -Syyyu --noconfirm \
     go \
     pod2man \
     openssh \
-    hyprland \
     stow-git
 
 # RUN paru -aS --noconfirm \
@@ -66,6 +65,15 @@ ENV WAYLAND_DISPLAY=wayland-1
 ENV LIBSEAT_BACKEND=logind
 ENV XDG_RUNTIME_DIR=/tmp
 ENV XDG_SESSION_TYPE=wayland
+
+RUN paru -Syyyu --noconfirm \
+    hyprland \
+    wayvnc \
+    wpaperd \
+    waysct \
+    alacritty \
+    firefox \
+    nautilus
 
 USER root
 # ENTRYPOINT [ "/tmp/entrypoint.sh" ]
