--- a/artix/Dockerfile
+++ b/artix/Dockerfile
@@ -60,6 +60,7 @@ RUN make -C ~/.config/nvim setup
 # ENV WLR_DRM_DEVICES=/dev/dri/card0
 ENV WLR_BACKENDS=headless
 ENV WLR_RENDERER=pixman
+ENV WLR_RENDERER_ALLOW_SOFTWARE=1
 ENV WLR_LIBINPUT_NO_DEVICES=1
 ENV WAYLAND_DISPLAY=wayland-1
 ENV LIBSEAT_BACKEND=logind
